<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActRegistraIva">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/diez"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <RadioButton
                android:id="@+id/veintiUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_21" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elija_el_iva_a_applicar" />
    </LinearLayout>

</LinearLayout>